# claude-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
agents/: acceptance-reviewer.md  auditor.md  dependency-scanner.md  developer.md  devils-advocate.md  devops-engineer.md  e2e-tester.md  em-reviewer.md  incident-responder.md  merge-reviewer.md  observability-engineer.md  orchestrator.md  owasp-reviewer.md  policy-validator.md  pr-raiser.md  risk-classifier.md  sdlc-code-reviewer.md  secret-scanner.md  security-reviewer.md  senior-backend-dev.md  senior-frontend-dev.md  senior-tester.md  spec-doc-writer.md  story-planner.md  technical-architect.md  tester.md  ui-designer.md  unit-tester.md
catalog/: mcp.yaml  org.yaml  profiles.yaml  stacks.yaml
commands/: init.md  new.md  sdlc.md  status.md
docs/: agentic-patterns.md  agents.md  architecture.md  org-capabilities.md
hooks/: hooks.json
hooks/scripts/: audit-log.sh  guard-secrets.sh  lint-fix.sh  load-continuity.sh  load-learnings.sh  type-check.sh  validate-frontmatter.sh  validate-settings.sh  warn-large-edits.sh  warn-missing-tests.sh  warn-sensitive-files.sh  warn-shared-modules.sh
rules/: agent-guardrails.md  agent-memory.md  agent-resilience.md  autonomy-levels.md  code-organization.md  continuity.md  design-patterns.md  devops-observability.md  documentation.md  evals.md  frontend-best-practices.md  goal-setting-and-monitoring.md  human-in-the-loop.md  linting-and-formatting.md  mandatory-workflow.md  model-tiers.md  quality-gates.md  rarv-cycle.md  reasoning-techniques.md  responsive-and-accessibility.md  risk-classification.md  testing.md  tool-design.md
scripts/: init.sh  new.py
skills/_references/: orchestration-patterns.md
skills/accessibility-review/: SKILL.md
skills/api-and-interface-design/: SKILL.md
skills/api-integration/: SKILL.md
skills/archive-sprint/: SKILL.md
skills/backlog/: SKILL.md  item-template.md
skills/browser-testing-with-devtools/: SKILL.md
skills/ci-cd-and-automation/: SKILL.md
skills/code-review-and-quality/: SKILL.md
skills/code-simplification/: SKILL.md
skills/component-design/: SKILL.md
skills/consolidate-learnings/: SKILL.md
skills/context-engineering/: SKILL.md
skills/debugging-and-error-recovery/: SKILL.md
skills/decision/: SKILL.md  adr-template.md
skills/deprecation-and-migration/: SKILL.md
skills/documentation-and-adrs/: SKILL.md
skills/doubt-driven-development/: SKILL.md
skills/execute/: SKILL.md
skills/frontend-ui-engineering/: SKILL.md
skills/git-workflow-and-versioning/: SKILL.md
skills/incident-postmortem/: SKILL.md
skills/incremental-implementation/: SKILL.md
skills/load-testing/: SKILL.md
skills/manual-test/: SKILL.md
skills/performance-optimization/: SKILL.md
skills/planning-and-task-breakdown/: SKILL.md
skills/playwright-verification/: SKILL.md
skills/refresh-docs/: SKILL.md
skills/remember/: SKILL.md
skills/scope/: SKILL.md  scope-template.md
skills/sdlc/: SKILL.md
skills/security-and-hardening/: SKILL.md
skills/security-verification/: SKILL.md
skills/shipping-and-launch/: SKILL.md
skills/smoke-test/: SKILL.md
skills/source-driven-development/: SKILL.md
skills/spec-driven-development/: SKILL.md
skills/sprint/: SKILL.md  sprint-template.md
skills/test-driven-development/: SKILL.md
skills/threat-model/: SKILL.md
skills/triage/: SKILL.md
skills/ui-ux-design/: SKILL.md
skills/unit-test/: SKILL.md
src/claude_kit/: __init__.py  __main__.py  catalog.py  cli.py  generate.py  hooks.py  models.py  prompts.py  render.py  scaffold.py  upgrader.py  validator.py
templates/: CLAUDE.md  CLAUDE.stack.md.tmpl  CONTINUITY.template.md  README.claude-sdlc.md.tmpl  settings.json
templates/agent-memory/: MEMORY.md
templates/artifacts/: adr.md  feature-spec.md  release-plan.md  runbook.md  security-review.md  test-plan.md
templates/org/: README.md
templates/org/agents/: data-workflow-agent.md  founder-prototype-agent.md  internal-tools-builder.md  pm-copilot.md  support-ticket-engineer.md
templates/org/rules/: ai-working-agreement.md  ambiguity-resolution.md  branch-and-pr-policy.md  compliance-policy.md  pii-policy.md  (+5 more)
tests/: _helpers.py  conftest.py  test_catalog.py  test_cli.py  test_render.py  test_scaffold.py  test_upgrader.py  test_validator.py
(+81 files in other folders)
